test-cases/negative/test_138_import_without_quote.lay
# negative test: import path without quotes
# expected: parser should reject this

import utils from ./utils.lay


